--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -313,6 +313,10 @@
                                 <state key="normal" title="Back">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="backBtnPressed:" destination="a2f-Nq-MF3" eventType="touchUpInside" id="eeh-3j-QHD"/>
+                                    <segue destination="XVo-46-vwf" kind="show" identifier="goBackToTwoPlayersSetUpVC" id="9NP-bq-m1e"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJN-lB-YNW">
                                 <rect key="frame" x="279" y="606" width="80" height="40"/>
@@ -404,4 +408,7 @@
         <image name="Tic_Tac_Toe_Board" width="400" height="400"/>
         <image name="Tic_Tac_Toe_Title" width="2100" height="1500"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="9NP-bq-m1e"/>
+    </inferredMetricsTieBreakers>
 </document>
